Checkpoint save: Etch a Sketch project grid creation done.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Styles */
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
@@ -11,3 +13,27 @@ body {
     font-family: 'poppins', 'Courier New', Courier, monospace;
 
 }
+
+div {
+    border: 1px solid rgb(0, 145, 255);
+    width: 24px;
+    height: 24px;
+}
+#main-container{
+    margin-bottom: 75px;
+}
+.grid-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+    width: 414.22px;
+    height: 414.22px;
+    flex-wrap: wrap;
+
+}
+
+.grid-items:hover {
+    background-color:rgb(45, 196, 255);
+}
+
