--- a/style.css
+++ b/style.css
@@ -14,21 +14,30 @@ body {
 
 }
 
-div {
-    border: 1px solid rgb(0, 145, 255);
-    width: 24px;
-    height: 24px;
+.grid-items {
+    box-sizing: border-box;
+    border: 1px solid #9198a1;
+    width: 16px;
+    height: 16px;
+    margin: 0px;
 }
+
 #main-container{
     margin-bottom: 75px;
 }
+
+/* #main-grid-container {
+    border: 1px solid rgba(255, 195, 45, 1);
+} */
+
 .grid-container{
+   
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     padding: 0px;
-    width: 414.22px;
-    height: 414.22px;
+    /* width: 414.22px;
+    height: 414.22px; */
     flex-wrap: wrap;
 
 }
@@ -37,3 +46,29 @@ div {
     background-color:rgb(45, 196, 255);
 }
  */
+
+
+ #btn-generate-grid {
+  background-color: #405cf5;
+  border-radius: 6px;
+  border-width: 0;
+  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset,rgba(50, 50, 93, .1) 0 2px 5px 0,rgba(0, 0, 0, .07) 0 1px 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  font-family: 'poppins', 'Courier New', Courier, monospace;
+  font-size: 100%;
+  height: 44px;
+  width: 250px;
+  margin: 12px;
+  text-align: center;
+}
+
+#btn-generate-grid:disabled {
+  cursor: default;
+}
+
+#btn-generate-grid:focus {
+  box-shadow: rgba(50, 50, 93, .1) 0 0 0 1px inset, rgba(50, 50, 93, .2) 0 6px 15px 0, rgba(0, 0, 0, .1) 0 2px 2px 0, rgba(50, 151, 211, .3) 0 0 0 4px;
+}
+
