Checkpoint save: EaS project 100% done. - Added reset button bellow grid to clear sketch but keep user grid settings. - Edited reset button text. - Minor edit: centered button content (sorry being a perfectionist at point)

--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
 
 #btn-reset-grid {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   gap: 0.5em;
   background-color: #405bf500;
